# clickbait-commit-messages

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  LICENSE  README.md  list_available_models.py  make_clickbaity.py  pyproject.toml
clickbait_commit_messages/: __init__.py
clickbait_commit_messages/providers/: __init__.py  base.py  errors.py  groq.py  huggingface.py
