[tool.poetry]
name = "clickbait-commit-messages"
version = "v0.1.10"
description = "Make your commit messages extremely catchy."
authors = ["anferico <f.cariaggi4@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "make_clickbaity.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.scripts]
make-clickbaity = "make_clickbaity:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pylint = "^3.1.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
